--- a/404.md
+++ b/404.md
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: 404 - Page not found
+title: 404 - Now ya' did it...
 ---
 
-Sorry, we can't find that page that you're looking for. You can try take for a look by going [back to the homepage]({{ site.baseurl }}/).
+You're doing something wrong. You better go [back to the homepage]({{ site.baseurl }}/) before you mess something else up....
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+[<img src="{{ site.baseurl }}/images/warning.png" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
