--- a/_posts/2015-1-19-0Steam1.md
+++ b/_posts/2015-1-19-0Steam1.md
@@ -26,11 +26,11 @@ Firstly, I love Gamedev, and the Gamedev community. Good people, good times. I k
 
 Secondly, what I plan to accomplish is simple. Develop a simple game, Publish it to steam, and Document the whole process. 
 
-And Thirdly, I don't know exactly what kind of game I'm making, but I have a few guidlines I've laid out. 1. The game must be small in scope. 2. The game must have local or splitscreen co-op 3. The game must fit on Steam (Work well with Steamworks etc.) Othere than these 3 things, it's all up in the air.
+And Thirdly, I don't know exactly what kind of game I'm making, but I have a few guidlines I've laid out. 1. The game must be small in scope. 2. The game must have local or splitscreen co-op 3. The game must fit on Steam (Work well with Steamworks etc). Other than these 3 things, it's all up in the air.
 
 I'm planning on releasing an update every few days or so. Life always get's in the way.
 I also understand that the chance of this going smoothly all of the way through is very low. Infact, the chance of me finish this game AND getting it accepted to steam is very low. But, why not try?
 
-I'll be back soon with update #2 where we will begin to discus some idea's for this new game!
+I'll be back soon with update #2 where we will begin to discus some ideas for this new game!
 
 -Collin
